security: restrict CORS to allowed origins list (task 0.2)